--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -72,3 +72,15 @@
 }
 
 
+
+
+  .timeline-img {
+  border-radius: 70%;
+  width: 100px;
+  height: 100px;
+  float: left;
+  margin-right: 10px;
+  }
+
+
+
