--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -11,6 +11,12 @@
   &:hover {
     box-shadow: 0 14px 28px rgba(86, 208, 49, 0.25), 0 10px 10px rgba(93, 209, 151, 0.98);
   }
+
+  .repo-img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+  }
 }
 
 // Register and Sign in CSS
@@ -73,33 +79,75 @@
 
 // @@@@@@@@@@@@@@@@@@timeline css
 
-  .timeline-img {
-  border-radius: 70%;
-  width: 100px;
-  height: 100px;
-  float: left;
-  margin-right: 10px;
-  }
+.book-bean-logo {
+  max-width: 100%;
+  max-height: 150px;
+  margin: auto;
+  border-radius: 50% 80% 65% 50%;
+}
 
 
   .q-timeline {
     display: flex;
     flex-direction: column;
     align-items: center;
-
   }
 
-  .timeline-entry {
-    padding: 80px;
-    margin-top: 100px;
+  .custom-timeline-entry {
+    padding-top: 90px;
+    margin-top: 40px;
+    margin-bottom: 80px;
     display: flex;
-    margin-bottom: 1rem;
     align-items: center;
     justify-content: center;
     width: 50%;
+    border-radius: 10% 10% 10% 40%;
+    // border: 1px solid rgb(89, 217, 155);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     &:hover {
       box-shadow: 0 14px 28px rgba(86, 208, 49, 0.25), 0 10px 10px rgba(93, 209, 151, 0.98);
     }
+
+    .timeline-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .timeline-img {
+      border-radius: 50% 80% 65% 50%;
+      width: 75%;
+      height: 70%;
+      float: left;
+      margin-bottom: 20px;
+
+      img {
+        border-radius: 80%;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .timeline-description {
+      border-radius: 20px;
+      padding: 10px;
+      border: 1px solid rgb(89, 217, 155);
+    }
   }
 
+
+
+  .q-horizontal-nav {
+    display: flex;
+    justify-content: center;
+
+    & > button {
+      border: none;
+      color: green;
+    }
+
+    & > button:last-child {
+      margin-left: auto;
+    }
+  }
