timelineEntry existingBook method added

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -78,6 +78,14 @@
 
 
 // @@@@@@@@@@@@@@@@@@timeline css
+.timeline-description {
+  background-color: #91ca91; /* set a darker green background color */
+  color: #d4ffd4; /* set a lighter green text color */
+  padding: 10px;
+  margin-top: 5px;
+  justify-content: center;
+}
+
 
 .book-bean-logo {
   max-width: 100%;
